apps/ghost/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: abcs.news
  namespace: ghost
  labels:
    environment: production
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-http01"
spec:
  ingressClassName: nginx
  tls:
    - secretName: "abcs.news-tls"
      hosts:
        - "abcs.news"
  rules:
    - host: "abcs.news"
      http:
        paths:
          - path: /
            pathType: ImplementationSpecific
            backend:
              service:
                name: ghost
                port:
                  number: 80
